--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -4,6 +4,7 @@ body{
     color: white;
     
 }
+
 header{
     display: inline-block;
 }
@@ -72,10 +73,7 @@ button{
     display: flex;
     margin-bottom: 20px;
 }
-.center{
-   
-    
-}
+
 div span{
     color: white;
     margin: 7px;
@@ -96,9 +94,7 @@ div span{
     text-align: center;
     margin-bottom: 20px;
 }
-.members_pics{
 
-}
 h2{font-size: 20px;
     align-items: center;
     text-align: center;
@@ -106,4 +102,24 @@ h2{font-size: 20px;
 }
 .lawrence img{
     border-radius: 50%;
+}
+.Bitmap_Section{
+    background-color: #c271ff;
+    height: 300px;
+    display: block;
+}
+.Bitmap{
+    display: inline-block;
+    align-items: center;
+}
+.Bitmap_text{
+    text-decoration: none;
+    display: inline-block;
+    width: 420px;
+    
+}
+.Bitmap img{
+    padding-left: 200px;
+    margin-top: 65px;
+
 }
